--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="main">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -41,3 +41,12 @@
     -->
   </body>
 </html>
+
+<style>
+  .main {
+    /*background: radial-gradient(53.9% 53.9% at 77.01% 30.21%, rgba(31, 195, 231, 0.84375) 0%, #030b5a 100%) no-repeat center;*/
+    background: rgb(24, 4, 84);
+    width: 100%;
+    background-size: contain;
+  }
+</style>
